tests/negative/test_cn_asgn_cn_data.orb
data Foo {
    i32 x;
}

fnc makeFoo() Foo {
    let Foo f;
    ret f;
}

fnc main() {
    let Foo cn f1 = makeFoo();
    let Foo f2;
    f1 = f2;
}